--- a/pipeline/filebeat.conf
+++ b/pipeline/filebeat.conf
@@ -14,8 +14,8 @@ filter {
 }
 
 output {
-    elasticsearch {
-        hosts => [ "elasticsearch.elk:9200" ]
-    }
-    # stdout {codec => rubydebug}
+    # elasticsearch {
+    #     hosts => [ "elasticsearch.elk:9200" ]
+    # }
+    stdout {codec => rubydebug}
 }
