--- a/config/logstash.yml
+++ b/config/logstash.yml
@@ -1,3 +1,5 @@
 http.host: "0.0.0.0"
 path.config: /usr/share/logstash/pipeline
-xpack.monitoring.elasticsearch.url: http://elasticsearch.elk:9200
+xpack.monitoring.elasticsearch.url: "http://elasticsearch.elk:9200"
+xpack.monitoring.elasticsearch.username: ""
+xpack.monitoring.elasticsearch.password: ""
