调整过滤器

--- a/pipeline/filebeat.conf
+++ b/pipeline/filebeat.conf
@@ -6,10 +6,15 @@ input {
 
 filter {
     grok {
-        match => {"message" => "%{COMBINEDAPACHELOG}"}
+        match => {
+            # "message" => "%{COMBINEDAPACHELOG}"
+            "message" => '%{IPORHOST:clientip} %{HTTPDUSER:ident} %{HTTPDUSER:auth} \[%{HTTPDATE:timestamp}\] "(?:%{WORD:verb} %{NOTSPACE:request}(?: HTTP/%{NUMBER:httpversion})?|%{DATA:rawrequest})" %{NUMBER:response} (?:%{NUMBER:bytes}|-) %{NUMBER:response_time} %{NUMBER:response_mtime} %{QS:referrer} %{QS:agent}'
+        }
+        remove_field => ["offset", "auth", "ident", "message", "response_time"]
     }
     geoip {
         source => "clientip"
+        fields => [ "city_name", "timezone", "ip", "country_name" ]
     }
 }
 
