调整输出信息

--- a/pipeline/filebeat.conf
+++ b/pipeline/filebeat.conf
@@ -22,5 +22,5 @@ output {
     elasticsearch {
         hosts => [ "elasticsearch.elk:9200" ]
     }
-    stdout {codec => rubydebug}
+    # stdout {codec => rubydebug}
 }
