调整配置文件

--- a/pipeline/filebeat.conf
+++ b/pipeline/filebeat.conf
@@ -1,6 +1,11 @@
 input {
     beats {
         port => '5043'
+        id => 'beats_5043'
+    }
+    beats {
+        port => '5044'
+        id => 'beats_5044'
     }
 }
 
@@ -21,6 +26,7 @@ filter {
 output {
     elasticsearch {
         hosts => [ "elasticsearch.elk:9200" ]
+        index => 'apache-%{+YYYY.MM.dd}'
     }
     # stdout {codec => rubydebug}
 }
